v4 - make graph dynamic depending on axis selection

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <body>
 
+        <g class="test"></g>
 
-
-        <script src="static/js/app.js"></script>
+        <script class="java" src="static/js/app.js"></script>
+        <!-- <script src="static/js/app_noFunc.js"></script> -->
     </body>
 </html>
