--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta lang="en">
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <title>Health Census Analysis</title>
+        <link rel="stylesheet" type="text/css" href="static/css/style.css">
     </head>
 
     <body>
