v5 - add tooltip and make dynamic

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <g class="test"></g>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
         <script class="java" src="static/js/app.js"></script>
         <!-- <script src="static/js/app_noFunc.js"></script> -->
     </body>
