--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <body>
 
-        <g class="test"></g>
+        <h1>Health Census Data</h1>
+        <h2>Analysis of Selected Health Metrics</h2>
+        <hr>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
         <script class="java" src="static/js/app.js"></script>
